--- a/WanderSync/app/src/main/res/layout/activity_main.xml
+++ b/WanderSync/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MainActivity">
-
+    <!--TODO: Abhi splash screen or welcome screen here -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
