--- a/WanderSync/app/src/main/res/layout/fragment_logistics.xml
+++ b/WanderSync/app/src/main/res/layout/fragment_logistics.xml
@@ -8,12 +8,33 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="56dp"
+        android:background="@android:color/background_dark"
+        android:gravity="center"
+        android:text="Logistics"
+        android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:gravity="center"
-        android:background="@android:color/background_dark"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="Logistics" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_nav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </FrameLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_nav_menu"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
