--- a/Project/WanderSync/app/src/main/res/layout/fragment_destination.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_destination.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <!--TODO: Abhi - Add nav bar to each page -->
+
+    <!-- Destination title -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -16,4 +17,97 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="Destination" />
 
+    <!-- Button to open travel log form -->
+    <Button
+        android:id="@+id/button_open_log_form"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log a Vacation"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <!-- Form for logging a vacation -->
+    <LinearLayout
+        android:id="@+id/log_form"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/button_open_log_form"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/input_location"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter travel location" />
+
+        <EditText
+            android:id="@+id/input_start_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Start date (YYYY-MM-DD)" />
+
+        <EditText
+            android:id="@+id/input_end_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="End date (YYYY-MM-DD)" />
+
+        <!-- Buttons for form actions -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="16dp">
+
+            <Button
+                android:id="@+id/button_cancel_log"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cancel" />
+
+            <Button
+                android:id="@+id/button_submit_log"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Submit" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- List of logged vacations -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_travel_logs"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/log_form"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="16dp"/>
+
+    <!-- Form for vacation time input -->
+    <LinearLayout
+        android:id="@+id/vacation_time_form"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/recycler_travel_logs"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <Button
+            android:id="@+id/button_calculate_duration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calculate Duration"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
