--- a/Project/WanderSync/app/src/main/res/layout/fragment_destination.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_destination.xml
@@ -82,32 +82,87 @@
         </LinearLayout>
     </LinearLayout>
 
+    <!-- Button to open calculate duration form -->
+    <Button
+        android:id="@+id/button_open_calculate_duration_form"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calucate Duration"
+        app:layout_constraintTop_toBottomOf="@id/log_form"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <!-- Form for calculate duration time -->
+    <LinearLayout
+        android:id="@+id/calculate_duration_form"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/button_open_calculate_duration_form"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/vacation_start_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Start date (YYYY-MM-DD)" />
+
+        <EditText
+            android:id="@+id/vacation_end_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="End date (YYYY-MM-DD)" />
+
+        <TextView
+            android:id="@+id/duration_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center"/>
+
+
+
+        <!-- Buttons for form actions -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="16dp">
+
+            <Button
+                android:id="@+id/button_cancel_duration_form"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Cancel" />
+
+            <Button
+                android:id="@+id/button_calculate_duration"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Calculate" />
+        </LinearLayout>
+    </LinearLayout>
+
+
     <!-- List of logged vacations -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_travel_logs"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/log_form"
+        app:layout_constraintTop_toBottomOf="@id/calculate_duration_form"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="16dp"/>
-
-    <!-- Form for vacation time input -->
-    <LinearLayout
-        android:id="@+id/vacation_time_form"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/recycler_travel_logs"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <Button
-            android:id="@+id/button_calculate_duration"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Calculate Duration"
-            android:layout_gravity="center_horizontal" />
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
