--- a/Project/WanderSync/app/src/main/res/layout/fragment_logistics_edit.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_logistics_edit.xml
@@ -22,6 +22,7 @@
         android:id="@+id/btn_graph"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:focusable="true"
         android:text="Track Planning"
         android:layout_gravity="center_horizontal|top"
         android:layout_marginTop="70dp"/>
@@ -29,8 +30,30 @@
     <com.github.mikephil.charting.charts.PieChart
         android:id="@+id/piechart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:visibility="gone"/>
+        android:layout_height="293dp"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_marginTop="120dp"
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/text_contributors"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contributors"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="420dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trip_contributors"
+        android:layout_width="319dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="450dp"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
 </FrameLayout>
