--- a/Project/WanderSync/app/src/main/res/layout/fragment_destination.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_destination.xml
@@ -117,17 +117,11 @@
             android:layout_height="wrap_content"
             android:hint="End date (YYYY-MM-DD)" />
 
-        <TextView
-            android:id="@+id/duration_text_view"
-            android:layout_width="wrap_content"
+        <EditText
+            android:id="@+id/vacation_duration"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:gravity="center"/>
+            android:hint="Duration (days)" />
 
 
 
