--- a/Project/WanderSync/app/src/main/res/layout/fragment_logistics_edit.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_logistics_edit.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -16,44 +15,77 @@
         android:textColor="@android:color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:layout_gravity="top"/>
+        android:layout_gravity="top" />
 
-    <Button
-        android:id="@+id/btn_graph"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:text="Track Planning"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginTop="70dp"/>
-
-    <com.github.mikephil.charting.charts.PieChart
-        android:id="@+id/piechart"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="293dp"
-        android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="120dp"
-        android:visibility="gone" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="56dp">
 
-    <TextView
-        android:id="@+id/text_contributors"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Contributors"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="420dp" />
+        <Button
+            android:id="@+id/btn_graph"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Track Planning"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/trip_contributors"
-        android:layout_width="319dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="450dp"
-        android:textColor="@android:color/black"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/piechart"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@id/btn_graph"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/text_contributors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Contributors"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@id/piechart"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <!-- RecyclerView below Contributors -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trip_contributors"
+            android:layout_width="348dp"
+            android:layout_height="201dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_contributors" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/invite_users"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_contact_mail_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="100dp"
+            android:layout_marginRight="16dp" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/add_notes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_edit_note_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginBottom="100dp"
+            android:layout_marginLeft="16dp" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
