working accommodation reservation recycler view

--- a/Project/WanderSync/app/src/main/res/layout/item_accommodation_reservation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/item_accommodation_reservation.xml
@@ -7,12 +7,22 @@
     android:padding="8dp">
 
     <TextView
+        android:id="@+id/text_location"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Location: "
+        android:textSize="16sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
         android:id="@+id/text_check_in"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Check-in: "
         android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/text_location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
