--- a/Project/WanderSync/app/src/main/res/layout/fragment_dining.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_dining.xml
@@ -5,7 +5,6 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".view.DiningFragment">
-    <!--TODO: Abhi - Add nav bar to each page -->
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
@@ -18,10 +17,100 @@
         app:layout_constraintTop_toTopOf="parent"
         android:text="Dining Establishments" />
 
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="521dp"
+        android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+            
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/divider_upcoming"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="#cccccc"
+                    android:padding="8dp"
+                    android:text="Upcoming Reservations"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
+                    android:visibility="visible" />
+                <ImageButton
+                    android:id="@+id/button_sort_upcoming"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:background="@android:color/transparent"
+                    android:padding="9dp"
+                    android:layout_marginTop="5dp"
+                    android:rotation="90"
+                    android:src="@drawable/sort" />
+
+
+            </FrameLayout>
+
+
+
+
+            <!-- RecyclerView for Upcoming Reservations -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/upcoming_reservation_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:nestedScrollingEnabled="false" />
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/divider_past"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:background="#cccccc"
+                    android:padding="8dp"
+                    android:text="Past Reservations"
+                    android:textAppearance="?attr/textAppearanceSubtitle1"
+                    android:visibility="visible" />
+
+                <ImageButton
+                    android:id="@+id/button_sort_past"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end|center_vertical"
+                    android:background="@android:color/transparent"
+                    android:padding="9dp"
+                    android:layout_marginTop="5dp"
+                    android:rotation="90"
+                    android:src="@drawable/sort" />
+            </FrameLayout>
+
+            <!-- RecyclerView for Past Reservations -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/past_reservation_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false" />
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="56dp">
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_add_reservation"
@@ -36,8 +125,8 @@
         <!-- Form for New Reservation Entry -->
         <LinearLayout
             android:id="@+id/reservation_form"
-            android:layout_width="match_parent"
-            android:layout_height="301dp"
+            android:layout_width="411dp"
+            android:layout_height="504dp"
             android:layout_gravity="center"
             android:background="@android:color/white"
             android:elevation="8dp"
@@ -57,11 +146,18 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <EditText
+            <com.github.florent37.singledateandtimepicker.SingleDateAndTimePicker
                 android:id="@+id/input_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Time (HH:MM)" />
+                android:layout_width="381dp"
+                android:layout_height="253dp"
+                app:picker_curved="true"
+                app:picker_curvedMaxAngle="45"
+                app:picker_cyclic="false"
+                app:picker_dayCount="31"
+                app:picker_itemSpacing="6dp"
+                app:picker_stepSizeHours="1"
+                app:picker_stepSizeMinutes="5"
+                app:picker_visibleItemCount="7" />
 
             <EditText
                 android:id="@+id/input_location"
