--- a/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
@@ -43,7 +43,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="85dp"/>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_open_accomodation_form"
