--- a/Project/WanderSync/app/src/main/res/layout/item_accommodation_reservation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/item_accommodation_reservation.xml
@@ -56,4 +56,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <TextView
+        android:id="@+id/text_past_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PAST"
+        android:textColor="@android:color/holo_red_dark"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
