Major database restructuring for collaboration function. Use 9@1.com or newly created accounts after this update

--- a/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
@@ -38,7 +38,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_accommodations"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/title_accommodations"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
