--- a/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/fragment_accomodation.xml
@@ -26,7 +26,7 @@
             android:id="@+id/title_accommodations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Accommodations"
+            android:text="Accommodations"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"
@@ -34,17 +34,59 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="8dp" />
 
-        <!-- RecyclerView for accommodation items -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_accommodations"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/title_accommodations"
-            app:layout_constraintStart_toStartOf="parent"
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="521dp"
+            android:layout_marginTop="50dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="85dp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/title_accommodations">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/divider_upcoming"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:background="#cccccc"
+                        android:padding="8dp"
+                        android:text="Reservations"
+                        android:textAppearance="?attr/textAppearanceSubtitle1"
+                        android:visibility="visible" />
+                    <ImageButton
+                        android:id="@+id/button_sort_accommodations"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end|center_vertical"
+                        android:background="@android:color/transparent"
+                        android:padding="9dp"
+                        android:layout_marginTop="5dp"
+                        android:rotation="90"
+                        android:src="@drawable/sort" />
+                </FrameLayout>
+
+                <!-- RecyclerView for Upcoming Reservations -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_accommodations"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:nestedScrollingEnabled="false" />
+
+                <!-- RecyclerView for Past Reservations -->
+
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/button_open_accomodation_form"
