--- a/Project/WanderSync/app/src/main/res/layout/item_accommodation_reservation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/item_accommodation_reservation.xml
@@ -2,15 +2,18 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
+
 
     <TextView
         android:id="@+id/text_location"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Location: "
+        android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,5 +58,15 @@
         app:layout_constraintTop_toBottomOf="@id/text_num_rooms"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/past_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PAST"
+        android:textStyle="bold"
+        android:textColor="#ff0000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
