--- a/Project/WanderSync/app/src/main/res/layout/item_dining_reservation.xml
+++ b/Project/WanderSync/app/src/main/res/layout/item_dining_reservation.xml
@@ -11,6 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Location: "
+        android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +36,16 @@
         app:layout_constraintTop_toBottomOf="@id/text_timing"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <TextView
+        android:id="@+id/past_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PAST"
+        android:textStyle="bold"
+        android:textColor="#ff0000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
